2001-11-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/society/DBInitializerServiceProvider.java:
	Throw exception if translateAttributeValue finds no translate
	(query returns no row).

2001-11-09  Michael Thome  <mthome@bbn.com>

	* org/cougaar/util/ConfigFinder
	Add find(URL) method to return the URL used by open.  Useful for
	debugging purposes, but expensive.

2001-11-08  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NamingDirContext.java:
	Remove obsolete code containing references to obsolete
	RMINameServer.

	* org/cougaar/core/naming/NSLS.java:
	Use new NamingServiceFactory instead of RMINameServer.

	* org/cougaar/core/society/Communications.java:
	Remove obsolete reference to RMINameServer.

	* org/cougaar/core/naming/NamingServiceProvider.java:
	Use the new NamingServiceFactory instead of RMINameServer.

	* org/cougaar/core/naming/NamingServiceFactory.java:
	This is a new implementation of the old RMINameServer. This is a
	much cleaner, more straightforward and efficient implementation.

2001-11-07  Michael Thome  <mthome@bbn.com>

	* PlugInAdapter
	Port to use SchedulerServiceProvider.

	* ComponentPlugin
	Effective use of new per-node scheduler, avoiding occasional
	multi-thread execution of the same scheduled instance.

	* SchedulerServiceProvider
	Rewrite and merge with PluginScheduler.  By default, now uses a
	per-node scheduler of a pool of threads rather than single
	per-agent thread for performance improvement and additional
	parallelism. 

	* ClusterImpl
	Use only new SchedulerServiceProvider instead of PluginScheduler.

	* org.cougaar.core.society.Bootstrapper
	Changed rules for the bootstrap classloader to avoid the whole
	package-prefix exclusion-list mess.  Essentially, the classloader
	will attempt to load classes from "discovered" jars and then defer
	to the system classloader to try to find everything else.

2001-11-02  Ray Tomlinson  <RTomlinson@bbn.com>
